pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kubia
  name: pod1
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
