service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec: 
  type: NodePort
  selector:
    app: kubia
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
